Atualizando o path do css no html de add-actor-to-bl.

--- a/front-end/html/add-actor-to-bl.html
+++ b/front-end/html/add-actor-to-bl.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar Ator ao BL</title>
-    <link rel="stylesheet" href="css/add-actor-to-bl.css">
+    <link rel="stylesheet" href="../css/add-actor-to-bl.css">
 </head>
 <body>
     <header class="page-header">
