--- a/front-end/html/add-character-ship.html
+++ b/front-end/html/add-character-ship.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar Ship de Personagens</title>
-    <link rel="stylesheet" href="css/add-character-ship.css">
+    <link rel="stylesheet" href="../css/add-character-ship.css">
 </head>
 <body>
     <header class="page-header">
