--- a/front-end/html/add-tags.html
+++ b/front-end/html/add-tags.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar Tags</title>
-    <link rel="stylesheet" href="css/add-tags.css">
+    <link rel="stylesheet" href="../css/add-tags.css">
 </head>
 <body>
     <header class="page-header">
