Adicionando o botão "Sair" no html para possibilitar o logout em todas as páginas.

--- a/front-end/html/add-actor-to-bl.html
+++ b/front-end/html/add-actor-to-bl.html
@@ -16,6 +16,9 @@
             <p class="page-subtitle">Digite o nome do ator para vincular a este BL</p>
         </div>
         <div class="spacer"></div>
+        <button class="logout-button" onclick="logout()">
+    Sair
+</button>
     </header>
 
     <div class="content-container">
