--- a/front-end/html/add-tags.html
+++ b/front-end/html/add-tags.html
@@ -16,6 +16,9 @@
             <p class="page-subtitle">Selecione tags existentes ou crie novas</p>
         </div>
         <div class="spacer"></div>
+        <button class="logout-button" onclick="logout()">
+    Sair
+</button>
     </header>
 
     <div class="content-container">
