--- a/front-end/html/bl-list.html
+++ b/front-end/html/bl-list.html
@@ -13,6 +13,9 @@
         </button>
         <h1 class="page-title">BLs Cadastrados</h1>
         <div class="spacer"></div>
+        <button class="logout-button" onclick="logout()">
+    Sair
+</button>
     </header>
 
     <div class="content-container">
