--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -11,6 +11,9 @@
         <div class="header-bg"></div>
         <div class="header-content">
         </div>
+        <button class="logout-button" onclick="logout()">
+    Sair
+</button>
     </header>
 
     <div class="main-content">
