--- a/front-end/html/add-bl.html
+++ b/front-end/html/add-bl.html
@@ -13,6 +13,9 @@
         </button>
         <h1 class="page-title">Adicionar Novo BL</h1>
         <div class="spacer"></div>
+        <button class="logout-button" onclick="logout()">
+    Sair
+</button>
     </header>
 
     <div class="form-container">
