--- a/front-end/html/bl-details.html
+++ b/front-end/html/bl-details.html
@@ -14,6 +14,9 @@
         </button>
         <h1 class="page-title" id="bl_title">Detalhes do BL</h1>
         <div class="spacer"></div>
+        <button class="logout-button" onclick="logout()">
+    Sair
+</button>
     </header>
 
     <div class="content-container">
