--- a/front-end/html/login.html
+++ b/front-end/html/login.html
@@ -64,7 +64,7 @@
             </div>
         </div>
     </div>
-    <script src="js/auth.js"></script>
-    <script src="js/login.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 </html>
