--- a/front-end/html/add-tags.html
+++ b/front-end/html/add-tags.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar Tags - Theedom</title>
     <link rel="stylesheet" href="../css/add-tags.css">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <header class="page-header">
         <button class="back-button" onclick="window.history.back()">
@@ -17,8 +20,8 @@
         </div>
         <div class="spacer"></div>
         <button class="logout-button" onclick="logout()">
-    Sair
-</button>
+            Sair
+        </button>
     </header>
 
     <div class="content-container">
@@ -54,12 +57,7 @@
                 <h3 class="section-title">Criar Novas Tags</h3>
                 <div id="new-tags-container">
                     <div class="new-tag-field">
-                        <input 
-                            type="text" 
-                            id="new-tag-1" 
-                            class="form-input"
-                            placeholder="Nome da nova tag"
-                        >
+                        <input type="text" id="new-tag-1" class="form-input" placeholder="Nome da nova tag">
                     </div>
                 </div>
 
@@ -82,4 +80,5 @@
     <script src="js/auth.js"></script>
     <script src="js/add-tags.js"></script>
 </body>
+
 </html>
