--- a/front-end/html/bl-details.html
+++ b/front-end/html/bl-details.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do BL - Theedom</title>
     <link rel="stylesheet" href="../css/bl-details.css">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
 
     <header class="page-header">
@@ -15,8 +18,8 @@
         <h1 class="page-title" id="bl_title">Detalhes do BL</h1>
         <div class="spacer"></div>
         <button class="logout-button" onclick="logout()">
-    Sair
-</button>
+            Sair
+        </button>
     </header>
 
     <div class="content-container">
@@ -146,4 +149,5 @@
     <script src="js/auth.js"></script>
     <script src="js/bl-details.js"></script>
 </body>
+
 </html>
