--- a/front-end/html/add-character-ship.html
+++ b/front-end/html/add-character-ship.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar Ship de Personagens - Theedom</title>
     <link rel="stylesheet" href="../css/add-character-ship.css">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <header class="page-header">
         <button class="back-button" onclick="window.history.back()">
@@ -17,8 +20,8 @@
         </div>
         <div class="spacer"></div>
         <button class="logout-button" onclick="logout()">
-    Sair
-</button>
+            Sair
+        </button>
     </header>
 
     <div class="content-container">
@@ -47,41 +50,23 @@
                     <div class="ship-header">
                         <h3 class="ship-title">Ship 1</h3>
                     </div>
-                    
+
                     <div class="form-group">
                         <label for="ship-name-1">Nome do Ship</label>
-                        <input 
-                            type="text" 
-                            id="ship-name-1" 
-                            name="ship-name-1" 
-                            class="form-input"
-                            placeholder="Ex: PhayaTharn"
-                            required
-                        >
+                        <input type="text" id="ship-name-1" name="ship-name-1" class="form-input"
+                            placeholder="Ex: PhayaTharn" required>
                     </div>
 
                     <div class="form-group">
                         <label for="character-1-1">Personagem 1</label>
-                        <input 
-                            type="text" 
-                            id="character-1-1" 
-                            name="character-1-1" 
-                            class="form-input"
-                            placeholder="Nome do primeiro personagem"
-                            required
-                        >
+                        <input type="text" id="character-1-1" name="character-1-1" class="form-input"
+                            placeholder="Nome do primeiro personagem" required>
                     </div>
 
                     <div class="form-group">
                         <label for="character-2-1">Personagem 2</label>
-                        <input 
-                            type="text" 
-                            id="character-2-1" 
-                            name="character-2-1" 
-                            class="form-input"
-                            placeholder="Nome do segundo personagem"
-                            required
-                        >
+                        <input type="text" id="character-2-1" name="character-2-1" class="form-input"
+                            placeholder="Nome do segundo personagem" required>
                     </div>
                 </div>
             </div>
