--- a/front-end/html/bl-list.html
+++ b/front-end/html/bl-list.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BLs Cadastrados - Theedom</title>
     <link rel="stylesheet" href="../css/bl_list.css">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <header class="page-header">
         <button class="back-button" onclick="window.location.href='index.html'">
@@ -14,18 +17,13 @@
         <h1 class="page-title">BLs Cadastrados</h1>
         <div class="spacer"></div>
         <button class="logout-button" onclick="logout()">
-    Sair
-</button>
+            Sair
+        </button>
     </header>
 
     <div class="content-container">
         <div class="search-section">
-            <input 
-                type="text" 
-                id="search-input" 
-                class="search-input" 
-                placeholder="Pesquisar BL pelo título..."
-            >
+            <input type="text" id="search-input" class="search-input" placeholder="Pesquisar BL pelo título...">
         </div>
 
         <div id="bl-list" class="bl-list">
@@ -40,4 +38,5 @@
     <script src="js/auth.js"></script>
     <script src="js/bl-list.js"></script>
 </body>
+
 </html>
