--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Theedom</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <header class="header">
         <div class="header-bg"></div>
         <div class="header-content">
         </div>
         <button class="logout-button" onclick="logout()">
-    Sair
-</button>
+            Sair
+        </button>
     </header>
 
     <div class="main-content">
@@ -38,4 +41,5 @@
     <script src="js/auth.js"></script>
     <script src="js/script.js"></script>
 </body>
+
 </html>
