--- a/front-end/html/login.html
+++ b/front-end/html/login.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Theedom</title>
     <link rel="stylesheet" href="../css/login.css">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div class="login-container">
         <div class="overlay"></div>
@@ -32,28 +35,14 @@
                 <form id="login-form" class="login-form" novalidate>
                     <div class="form-group">
                         <label for="login">Login</label>
-                        <input
-                            type="text"
-                            id="login"
-                            name="login"
-                            class="form-input"
-                            placeholder="Digite seu login"
-                            autocomplete="username"
-                            required
-                        >
+                        <input type="text" id="login" name="login" class="form-input" placeholder="Digite seu login"
+                            autocomplete="username" required>
                     </div>
 
                     <div class="form-group">
                         <label for="password">Senha</label>
-                        <input
-                            type="password"
-                            id="password"
-                            name="password"
-                            class="form-input"
-                            placeholder="Digite sua senha"
-                            autocomplete="current-password"
-                            required
-                        >
+                        <input type="password" id="password" name="password" class="form-input"
+                            placeholder="Digite sua senha" autocomplete="current-password" required>
                     </div>
 
                     <button type="submit" class="submit-button">
@@ -67,4 +56,5 @@
     <script src="../js/auth.js"></script>
     <script src="../js/login.js"></script>
 </body>
+
 </html>
