Melhorando experiência de UX adicionando/alterando: atualizar card 2 da homepage com novos textos; adicionar botão '+ adicionar BL' em bl-list.html; adicionar estilos do botão em bl_list.css e redirecionar para bl-details após criar BL.

--- a/front-end/html/bl-list.html
+++ b/front-end/html/bl-list.html
@@ -15,6 +15,9 @@
             <span class="arrow">←</span>
         </button>
         <h1 class="page-title">BLs Cadastrados</h1>
+        <button class="add-new-bl-btn" onclick="window.location.href='add-bl.html'">
+            + Adicionar BL
+        </button>
         <div class="spacer"></div>
         <button class="logout-button" onclick="logout()">
             Sair
