--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -31,9 +31,9 @@
 
             <div class="action-card view-archive">
                 <span class="action-icon">📝</span>
-                <h2 class="action-title">Adicionar informações a BLs existentes</h2>
+                <h2 class="action-title">Gerenciar BLs cadastrados</h2>
                 <p class="action-description">
-                    Adicione mais detalhes e informações às séries que você já cadastrou
+                    Adicione informações e veja os BLs existentes no banco
                 </p>
             </div>
         </div>
