Colocando "slogam" do site no subtitulo da página de login.

--- a/front-end/html/login.html
+++ b/front-end/html/login.html
@@ -16,7 +16,7 @@
         <div class="content-wrapper">
             <div class="branding">
                 <h1 class="site-title">Theedom</h1>
-                <p class="site-tagline">Seu acervo pessoal de séries</p>
+                <p class="site-tagline">Seu gerenciador de séries bl</p>
             </div>
 
             <div class="login-card">
