1. Criado front-end/js/config.js com API_BASE_URL. 2. Adicionado <script src="js/config.js"> em 8 HTMLs. 3. Atualizado login.js, bl-list.js, add-bl.js para usar API_BASE_URL. 4. Corrigido add-bl.js que usava ?id= em vez de ?blId=

--- a/front-end/html/bl-list.html
+++ b/front-end/html/bl-list.html
@@ -38,6 +38,7 @@
             <p class="empty-message">Nenhum BL cadastrado ainda.</p>
         </div>
     </div>
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/bl-list.js"></script>
 </body>
