--- a/front-end/html/add-actor-to-bl.html
+++ b/front-end/html/add-actor-to-bl.html
@@ -60,6 +60,7 @@
             </div>
         </form>
     </div>
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/add-actor-to-bl.js"></script>
 </body>
