--- a/front-end/html/add-bl.html
+++ b/front-end/html/add-bl.html
@@ -97,6 +97,7 @@
 
         </form>
     </div>
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/add-bl.js"></script>
 </body>
