--- a/front-end/html/add-character-ship.html
+++ b/front-end/html/add-character-ship.html
@@ -86,6 +86,7 @@
             </div>
         </form>
     </div>
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/add-character-ship.js"></script>
 </body>
