--- a/front-end/html/add-character.html
+++ b/front-end/html/add-character.html
@@ -89,6 +89,7 @@
             </div>
         </form>
     </div>
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/add-character.js"></script>
 </body>
