--- a/front-end/html/add-tags.html
+++ b/front-end/html/add-tags.html
@@ -77,6 +77,7 @@
             </div>
         </form>
     </div>
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/add-tags.js"></script>
 </body>
