--- a/front-end/html/bl-details.html
+++ b/front-end/html/bl-details.html
@@ -146,6 +146,7 @@
         </section>
 
     </div>
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/bl-details.js"></script>
 </body>
