Frontend: Adiciona filtros de país, status e ano na listagem de BLs — dropdowns populados dinamicamente via GET /series/filters, filtragem server-side combinável com busca por título, debounce na busca, ordenação por data de lançamento (mais recente primeiro).

--- a/front-end/html/bl-list.html
+++ b/front-end/html/bl-list.html
@@ -29,6 +29,18 @@
             <input type="text" id="search-input" class="search-input" placeholder="Pesquisar BL pelo título...">
         </div>
 
+        <div class="filters-section">
+            <select id="filter-country" class="filter-select">
+                <option value="">Todos os países</option>
+            </select>
+            <select id="filter-status" class="filter-select">
+                <option value="">Todos os status</option>
+            </select>
+            <select id="filter-year" class="filter-select">
+                <option value="">Todos os anos</option>
+            </select>
+        </div>
+
         <div id="bl-list" class="bl-list">
             <!-- BLs serão inseridos aqui dinamicamente -->
         </div>
