--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -14,9 +14,6 @@
         <div class="header-bg"></div>
         <div class="header-content">
         </div>
-        <button class="logout-button" onclick="logout()">
-            Sair
-        </button>
     </header>
 
     <div class="main-content">
@@ -38,6 +35,10 @@
             </div>
         </div>
     </div>
+
+    <footer class="page-footer">
+        <button class="logout-button" onclick="logout()">Sair</button>
+    </footer>
     <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/script.js"></script>
