Frontend: Adiciona spinner de loading no botão de login — durante a requisição ao backend (que pode demorar por cold start do Lambda), o botão exibe "Entrando..." com animação de carregamento e fica desabilitado para evitar cliques duplos.

--- a/front-end/html/login.html
+++ b/front-end/html/login.html
@@ -45,9 +45,10 @@
                             placeholder="Digite sua senha" autocomplete="current-password" required>
                     </div>
 
-                    <button type="submit" class="submit-button">
+                    <button type="submit" class="submit-button" id="submit-btn">
                         <span class="button-text">Entrar</span>
                         <span class="button-icon">→</span>
+                        <span class="button-spinner" style="display: none;"></span>
                     </button>
                 </form>
             </div>
