Frontend+Backend: Troca input de ator por select em add-character e adiciona nickname ao schema ActorInSeries — add-character.html agora usa <select> populado com nicknames dos atores do BL (via GET /series/{blId}). add-character.js reescrito com populateActorSelect(). Corrige ActorInSeries em series.py que não expunha o campo nickname, impedindo o select de funcionar.

--- a/front-end/html/add-character.html
+++ b/front-end/html/add-character.html
@@ -59,8 +59,9 @@
 
                     <div class="form-group">
                         <label for="actor-name-1">Ator/Atriz</label>
-                        <input type="text" id="actor-name-1" name="actor-name-1" class="form-input"
-                            placeholder="Nome do ator ou atriz" required>
+                        <select id="actor-name-1" name="actor-name-1" class="form-select" required>
+                            <option value="">Selecione o ator/atriz...</option>
+                        </select>
                     </div>
 
                     <div class="form-group">
