--- a/front-end/html/add-bl.html
+++ b/front-end/html/add-bl.html
@@ -104,6 +104,19 @@
 
         </form>
     </div>
+    <!-- Modal de sucesso -->
+    <div id="success-modal" class="modal-overlay" style="display: none;">
+        <div class="modal-box">
+            <div class="modal-icon">&#127769;</div>
+            <h2 class="modal-title">BL criado com sucesso!</h2>
+            <p class="modal-text">Deseja continuar adicionando informações?<br><small>(atores, personagens, ships, tags)</small></p>
+            <div class="modal-actions">
+                <button id="modal-btn-no" class="modal-btn modal-btn-secondary">Não, ver detalhes</button>
+                <button id="modal-btn-yes" class="modal-btn modal-btn-primary">Sim, continuar</button>
+            </div>
+        </div>
+    </div>
+
     <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/add-bl.js"></script>
