--- a/front-end/html/add-bl.html
+++ b/front-end/html/add-bl.html
@@ -37,7 +37,7 @@
 
                 <div class="form-group">
                     <label for="release_date">Data de lançamento</label>
-                    <input type="date" id="release_date" name="release_date" required>
+                    <input type="text" id="release_date" name="release_date" required placeholder="Ex: 2023-08-15">
                 </div>
             </div>
 
@@ -89,12 +89,12 @@
             <div class="form-row">
                 <div class="form-group">
                     <label for="date_start">Data de início (assistido)</label>
-                    <input type="date" id="date_start" name="date_start">
+                    <input type="text" id="date_start" name="date_start" placeholder="Ex: 2023-08-15">
                 </div>
 
                 <div class="form-group">
                     <label for="date_watched">Data de término (assistido)</label>
-                    <input type="date" id="date_watched" name="date_watched">
+                    <input type="text" id="date_watched" name="date_watched" placeholder="Ex: 2023-09-20">
                 </div>
             </div>
 
