Frontend: Adiciona loading com pontos pulsantes no botão de submit das 5 páginas add — botão fica desabilitado e exibe animação de 3 dots durante o processamento do request, prevenindo duplo envio.

--- a/front-end/html/add-actor-ship.html
+++ b/front-end/html/add-actor-ship.html
@@ -81,7 +81,8 @@
                     Cancelar
                 </button>
                 <button type="submit" class="submit-button">
-                    Adicionar ships à série
+                    <span class="btn-text">Adicionar ships à série</span>
+                    <span class="btn-dots"><span></span><span></span><span></span></span>
                 </button>
             </div>
         </form>
