--- a/front-end/html/add-actor-to-bl.html
+++ b/front-end/html/add-actor-to-bl.html
@@ -87,7 +87,8 @@
                     Cancelar
                 </button>
                 <button type="submit" class="submit-button">
-                    Adicionar Ator
+                    <span class="btn-text">Adicionar Ator</span>
+                    <span class="btn-dots"><span></span><span></span><span></span></span>
                 </button>
             </div>
         </form>
