--- a/front-end/html/add-character-ship.html
+++ b/front-end/html/add-character-ship.html
@@ -81,7 +81,8 @@
                     Cancelar
                 </button>
                 <button type="submit" class="submit-button">
-                    Adicionar ships à série
+                    <span class="btn-text">Adicionar ships à série</span>
+                    <span class="btn-dots"><span></span><span></span><span></span></span>
                 </button>
             </div>
         </form>
