--- a/front-end/html/add-character.html
+++ b/front-end/html/add-character.html
@@ -85,7 +85,8 @@
                     Cancelar
                 </button>
                 <button type="submit" class="submit-button">
-                    Adicionar personagens
+                    <span class="btn-text">Adicionar personagens</span>
+                    <span class="btn-dots"><span></span><span></span><span></span></span>
                 </button>
             </div>
         </form>
