--- a/front-end/html/add-tags.html
+++ b/front-end/html/add-tags.html
@@ -72,7 +72,8 @@
                     Cancelar
                 </button>
                 <button type="submit" class="submit-button">
-                    Vincular tags à série
+                    <span class="btn-text">Vincular tags à série</span>
+                    <span class="btn-dots"><span></span><span></span><span></span></span>
                 </button>
             </div>
         </form>
