--- a/front-end/html/add-bl.html
+++ b/front-end/html/add-bl.html
@@ -99,7 +99,8 @@
             </div>
 
             <button type="submit" class="submit-button">
-                Salvar BL
+                <span class="btn-text">Salvar BL</span>
+                <span class="btn-dots"><span></span><span></span><span></span></span>
             </button>
 
         </form>
