Frontend: Reverte loading com pontos pulsantes dos botões de submit das páginas add — requests completam rápido demais para o loading ser perceptível.

--- a/front-end/html/add-character.html
+++ b/front-end/html/add-character.html
@@ -85,8 +85,7 @@
                     Cancelar
                 </button>
                 <button type="submit" class="submit-button">
-                    <span class="btn-text">Adicionar personagens</span>
-                    <span class="btn-dots"><span></span><span></span><span></span></span>
+                    Adicionar personagens
                 </button>
             </div>
         </form>
