--- a/front-end/html/add-actor-to-bl.html
+++ b/front-end/html/add-actor-to-bl.html
@@ -87,8 +87,7 @@
                     Cancelar
                 </button>
                 <button type="submit" class="submit-button">
-                    <span class="btn-text">Adicionar Ator</span>
-                    <span class="btn-dots"><span></span><span></span><span></span></span>
+                    Adicionar Ator
                 </button>
             </div>
         </form>
