--- a/front-end/html/add-bl.html
+++ b/front-end/html/add-bl.html
@@ -99,8 +99,7 @@
             </div>
 
             <button type="submit" class="submit-button">
-                <span class="btn-text">Salvar BL</span>
-                <span class="btn-dots"><span></span><span></span><span></span></span>
+                Salvar BL
             </button>
 
         </form>
