--- a/front-end/html/add-character-ship.html
+++ b/front-end/html/add-character-ship.html
@@ -81,8 +81,7 @@
                     Cancelar
                 </button>
                 <button type="submit" class="submit-button">
-                    <span class="btn-text">Adicionar ships à série</span>
-                    <span class="btn-dots"><span></span><span></span><span></span></span>
+                    Adicionar ships à série
                 </button>
             </div>
         </form>
