--- a/front-end/html/add-tags.html
+++ b/front-end/html/add-tags.html
@@ -72,8 +72,7 @@
                     Cancelar
                 </button>
                 <button type="submit" class="submit-button">
-                    <span class="btn-text">Vincular tags à série</span>
-                    <span class="btn-dots"><span></span><span></span><span></span></span>
+                    Vincular tags à série
                 </button>
             </div>
         </form>
