Feat: Troca inputs de texto por dropdowns de personagens na página add-character-ship — carrega personagens associados à série via API.

--- a/front-end/html/add-character-ship.html
+++ b/front-end/html/add-character-ship.html
@@ -59,14 +59,16 @@
 
                     <div class="form-group">
                         <label for="character-1-1">Personagem 1</label>
-                        <input type="text" id="character-1-1" name="character-1-1" class="form-input"
-                            placeholder="Nome do primeiro personagem" required>
+                        <select id="character-1-1" name="character-1-1" class="form-select" required>
+                            <option value="">Selecione o personagem...</option>
+                        </select>
                     </div>
 
                     <div class="form-group">
                         <label for="character-2-1">Personagem 2</label>
-                        <input type="text" id="character-2-1" name="character-2-1" class="form-input"
-                            placeholder="Nome do segundo personagem" required>
+                        <select id="character-2-1" name="character-2-1" class="form-select" required>
+                            <option value="">Selecione o personagem...</option>
+                        </select>
                     </div>
                 </div>
             </div>
